--- a/index.html
+++ b/index.html
@@ -14,20 +14,21 @@
         <nav>
             <ul>
                 <li><a href="#">Inicio</a></li>
-                <li><a href="./quiensoy.html">Quien soy</a></li>
+                <li><a href="./pages/quiensoy.html">Quién soy</a></li>
+                <li><a href="./pages/asesorias.html">Asesorías</a></li>
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle">Experiencias</a>
                     <ul class="dropdown-menu">
-                        <li><a href="#">Viajes a medida</a></li>
-                        <li><a href="#">Viajes lifestyle</a></li>
-                        <li><a href="#">Weddings y luna de miel </a></li>
-                        <li><a href="#">Viajes culturales</a></li>
-                        <li><a href="#">Playas</a></li>
+                        <li><a href="./pages/viajesamedida.html">Viajes a medida</a></li>
+                        <li><a href="./pages/viajeslifestyle.html">Viajes lifestyle</a></li>
+                        <li><a href="./pages/weddingsylunademiel.html">Weddings y luna de miel </a></li>
+                        <li><a href="./pages/viajesculturales.html">Viajes culturales</a></li>
+                        <li><a href="./pages/playas.html">Playas</a></li>
                     </ul>
                 </li>
-                <li><a href="./oportunidades.html">Oportunidades</a></li>
-                <li><a href="./magazine.html">Magazine</a></li>
-                <li><a href="./contacto.html">Contacto</a></li>
+                <li><a href="./pages/oportunidades.html">Oportunidades</a></li>
+                <li><a href="./pages/magazine.html">Magazine</a></li>
+                <li><a href="./pages/contacto.html">Contacto</a></li>
             </ul>
         </nav>
     </header>
@@ -38,62 +39,61 @@
         <section class="services">
             <div class="service">
                 <img src="./assets/service1.jpg" alt="Servicio 1">
-                <h4>Playas</h4>
-                <h5>La mejor época para viajar al Caribe mexicano es entre abril y mayo, cuando hay menos lluvias y las temperaturas están entre los 25 y 28 grados.</h5>
+                <h4>Asesorías</h4>
+                <h5>¿Planeando tu próximo viaje? Te ayudamos a dar forma a tus ideas con recomendaciones expertas, tips esenciales y planificación estratégica para que tengas un viaje inolvidable sin preocupaciones.</h5>
             </div>
             <div class="service">
                 <img src="./assets/service2.jpg" alt="Servicio 2">
                 <h4>Viajes a medida</h4>
-                <h5>Se entiende como viaje a medida aquel cuyo diseño ha sido preparado en base a los gustos o necesidades de los viajero</h5>
+                <h5>Creamos experiencias diseñadas exclusivamente para vos. Tus intereses, sueños y preferencias se convierten en un itinerario único y personalizado, lleno de inspiración.
+                </h5>
             </div>
             <div class="service">
                 <img src="./assets/service3.jpg" alt="Servicio 3">
-                <h4>Viajes lifestyle</h4>
-                <h5>
-                    Los viajes LifeStyle, son viajes que sin perder su parte cultural engloban temáticas o líneas de autor, definidas según destino.    </h5>
+                <h4>Viajes a la playa</h4>
+                <h5>Descubre los mejores destinos de playa, seleccionados para reconectar con el mar y el ritmo pausado de la naturaleza. Desde playas paradisíacas hasta rincones escondidos, diseñamos el escape perfecto para vos. </h5>
             </div>
             <div class="service">
                 <img src="./assets/service4.jpg" alt="Servicio 4">
-                <h4>Viajes culturales</h4>
-                <h5>Descripción breve</h5>
+                <h4>Viajes lifestyle</h4>
+                <h5>Diseñamos experiencias que se adaptan a tu esencia. Desde retiros de bienestar hasta escapadas con estilo, nuestros viajes celebran quién eres mientras te inspiran a explorar nuevas perspectivas.</h5>
             </div>
             <div class="service">
                 <img src="./assets/service5.jpg" alt="Servicio 5">
+                <h4>Viajes culturales</h4>
+                <h5>Sumérgete en la riqueza de cada destino a través de su historia, tradiciones y arte. Diseñamos rutas para que vivas experiencias auténticas y conectes profundamente con las culturas locales.</h5>
+            </div>
+            <div class="service">
+                <img src="./assets/service6.jpg" alt="Servicio 6">
                 <h4>Weddings y luna de miel</h4>
-                <h5>Descripción breve</h5>
+                <h5>Celebra el amor en destinos de ensueño. Nos encargamos de cada detalle, desde bodas íntimas hasta escapadas románticas, para que tu experiencia sea llena de conexión y significado.                </h5>
             </div>
         </section>
     </main>
     <footer>
         <div class="footer-container">
-            <!-- Logo a la izquierda -->
             <div class="footer-logo">
                 <a href="#"><img src="./assets/logo-blanco.png" alt="Inspirit"></a>
             </div>
-            
-            <!-- Contacto centrado -->
             <div class="footer-contact">
                 <div class="contact-item">
                     <img src="./assets/email-icon.png" alt="Email">
                     <p>contacto@inspirittravel.com</p>
                 </div>
-                <div class="contact-item">
-                    <img src="./assets/phone-icon.png" alt="Teléfono">
-                    <p>+1 234 567 890</p>
-                </div>
             </div>
-    
-            <!-- Redes Sociales a la derecha -->
             <div class="footer-social">
                 <a href="https://www.instagram.com" target="_blank">
                     <img src="./assets/instagram-icon.png" alt="Instagram">
                 </a>
-                <a href="https://www.facebook.com" target="_blank">
-                    <img src="./assets/facebook-icon.png" alt="Facebook">
+                <a href="https://wa.me/1234567890" target="_blank">
+                    <img src="./assets/meet.png" alt="Agendar Meet">
                 </a>
             </div>
         </div>
     </footer>
+    <a href="https://wa.me/1234567890" target="_blank" class="whatsapp-btn">
+        <img src="./assets/whatsapp.png" alt="WhatsApp" class="whatsapp-icon">
+    </a>
     <script src="./script.js"></script>
 </body>
 </html>
