--- a/index.html
+++ b/index.html
@@ -4,7 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inspirit Travel</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="./style.css">
 </head>
 <body>
     <header>
@@ -39,36 +45,42 @@
         <section class="services">
             <div class="service">
                 <img src="./assets/service1.jpg" alt="Servicio 1">
-                <h4>Asesorías</h4>
-                <h5>¿Planeando tu próximo viaje? Te ayudamos a dar forma a tus ideas con recomendaciones expertas, tips esenciales y planificación estratégica para que tengas un viaje inolvidable sin preocupaciones.</h5>
+                <h4>ASESORIAS</h4>
             </div>
             <div class="service">
                 <img src="./assets/service2.jpg" alt="Servicio 2">
-                <h4>Viajes a medida</h4>
-                <h5>Creamos experiencias diseñadas exclusivamente para vos. Tus intereses, sueños y preferencias se convierten en un itinerario único y personalizado, lleno de inspiración.
-                </h5>
+                <h4>VIAJES A MEDIDA</h4>
             </div>
             <div class="service">
                 <img src="./assets/service3.jpg" alt="Servicio 3">
-                <h4>Viajes a la playa</h4>
-                <h5>Descubre los mejores destinos de playa, seleccionados para reconectar con el mar y el ritmo pausado de la naturaleza. Desde playas paradisíacas hasta rincones escondidos, diseñamos el escape perfecto para vos. </h5>
+                <h4>VIAJES A LA PLAYA</h4>
             </div>
             <div class="service">
                 <img src="./assets/service4.jpg" alt="Servicio 4">
-                <h4>Viajes lifestyle</h4>
-                <h5>Diseñamos experiencias que se adaptan a tu esencia. Desde retiros de bienestar hasta escapadas con estilo, nuestros viajes celebran quién eres mientras te inspiran a explorar nuevas perspectivas.</h5>
+                <h4>VIAJES LIFESTYLE</h4>
             </div>
             <div class="service">
                 <img src="./assets/service5.jpg" alt="Servicio 5">
-                <h4>Viajes culturales</h4>
-                <h5>Sumérgete en la riqueza de cada destino a través de su historia, tradiciones y arte. Diseñamos rutas para que vivas experiencias auténticas y conectes profundamente con las culturas locales.</h5>
-            </div>
-            <div class="service">
-                <img src="./assets/service6.jpg" alt="Servicio 6">
-                <h4>Weddings y luna de miel</h4>
-                <h5>Celebra el amor en destinos de ensueño. Nos encargamos de cada detalle, desde bodas íntimas hasta escapadas románticas, para que tu experiencia sea llena de conexión y significado.                </h5>
+                <h4>VIAJES CULTURALES</h4>
             </div>
         </section>
+        <section class="quien-soy">
+            <h1>Quién Soy</h1>
+            <div class="contenido">
+                <div class="imagen">
+                    <img src="./assets/quiensoy.jpg" alt="Gabriela Molina">
+                </div>
+                <div class="texto">
+                    <p class="bienvenida">¡Bienvenidos a Inspirit! </p>
+                    <p>Soy Gabriela Molina, una apasionada de los viajes y las conexiones auténticas. Desde siempre he encontrado en cada destino una oportunidad para inspirarme, reconectar conmigo misma y explorar nuevas perspectivas.
+                        Después de 11 años de ser parte de distintas empresas de turismo, decidí crear Inspirit para compartir esa magia con otras personas, diseñando experiencias que no solo llevan a lugares hermosos, sino que también tocan el corazón.
+                        Entiendo que cada viaje es más que solo una escapatoria: es una oportunidad para desconectar, reflexionar y renovar energías. 
+                        Por eso, cada itinerario que diseño tiene en cuenta tu necesidad de encontrar espacio para ti mismo, de tomar un respiro y reconectar con lo que realmente importa.
+                        <i>Mi misión es ayudarte a vivir viajes que transformen, que te inspiren y que se conviertan en recuerdos únicos.</i>
+                    </p>
+                </div>
+            </div>
+        </section>  
     </main>
     <footer>
         <div class="footer-container">
