--- a/pages/viajeslifestyle.html
+++ b/pages/viajeslifestyle.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inspirit Travel - Viajes Lifestyle</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../style.css">
 </head>
 <body>
@@ -32,8 +38,26 @@
             </ul>
         </nav>
     </header>
-    <main>
+    <main class="quien-soy">
         <h1>Viajes lifestyle</h1>
+        <div class="contenido">
+            <div class="imagen">
+                <img src="../assets/lifestyle.jpg" alt="Gabriela Molina">
+            </div>
+            <div class="texto-playas">
+                
+                <p>¿Buscas un viaje que no solo sea un escape, sino una forma de expresar quién eres? Nuestros viajes lifestyle están diseñados para quienes desean viajar con propósito, estilo y autenticidad. <br>
+
+                    En Inspirit, te conectamos con experiencias que enriquecen y transforman, como: <br>
+                    • Escapadas wellness: Retírate a lugares donde cuerpo y mente se alinean con actividades como yoga, meditación y spas en medio de la naturaleza. <br>
+                    • Rutas gastronómicas: Saborea el destino a través de su cocina local y experiencias culinarias exclusivas.<br>
+                    • Viajes fotográficos: Explora paisajes increíbles mientras capturas recuerdos únicos con tu cámara. <br>
+                    • Escapadas culturales: Sumérgete en la historia, el arte y las tradiciones locales. <br>
+                    
+                    Porque viajar no es solo cambiar de lugar, sino también conectar con un estilo de vida que te inspire.
+                </p>
+            </div>
+        </div>
     </main>
     <footer>
         <div class="footer-container">
