--- a/pages/playas.html
+++ b/pages/playas.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inspirit Travel - Playas</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../style.css">
 </head>
 <body>
@@ -32,8 +38,26 @@
             </ul>
         </nav>
     </header>
-    <main>
-        <h1>Playas</h1>
+    <main class="playas">
+        <h1>Viajes a la playa</h1>
+        <div class="contenido">
+            <div class="imagen">
+                <img src="../assets/playas.jpg" alt="Gabriela Molina">
+            </div>
+            <div class="texto-playas">
+                
+                <p>Deja que el sonido de las olas, la arena suave y los atardeceres mágicos sean los protagonistas de tu próxima escapada.<br> En Inspirit, somos expertos en diseñar viajes de playa que combinan relax, lujo y exploración.
+
+                    Ya sea que sueñes con: <br>
+                    • Una villa privada frente al mar en un destino exótico.<br>
+                    • Descubrir playas secretas y piscinas naturales.<br>
+                    • Disfrutar de resorts todo incluido con servicios de primera clase.<br>
+                    • Practicar deportes acuáticos o simplemente descansar bajo el sol.<br>
+                    
+                    Nos aseguraremos de que tu experiencia sea tan única como vos. 
+                </p>
+            </div>
+        </div>
     </main>
     <footer>
         <div class="footer-container">
