--- a/index.html
+++ b/index.html
@@ -1,16 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es-AR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Inspirit Travel</title>
+    <meta name="description" content="Mi misión es ayudarte a vivir viajes que transformen, que te inspiren y que se conviertan en recuerdos únicos.">
+    <meta name="keywords" content="inspirit travel, inspirit, viajes,turismo, experiencias, playas, viajes lifestyle, viajes culturales">
+    <meta name="copyright" content="Inspirit Travel">
+    <meta name="robots" content="index, follow">
+    <meta property=og:title" content="Inspirit Travel">
+    <meta property=og:description" content="Empresa de viajes de turismo">
+    <meta property="og:image" content="https://i.postimg.cc/rpDXgfTY/logo.png">
+    <link rel="shortcut icon" href="./assets/logo.ico" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="./style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <title>Inspirit Travel</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
     <header>
@@ -44,23 +52,23 @@
         </div>
         <section class="services">
             <div class="service">
-                <img src="./assets/service1.jpg" alt="Servicio 1">
+                <a href="./pages/asesorias.html"> <img src="./assets/service1.jpg" alt="Servicio 1"></a>
                 <h4>ASESORIAS</h4>
             </div>
             <div class="service">
-                <img src="./assets/service2.jpg" alt="Servicio 2">
+                <a href="./pages/viajesamedida.html"> <img src="./assets/service2.jpg" alt="Servicio 2"></a>
                 <h4>VIAJES A MEDIDA</h4>
             </div>
             <div class="service">
-                <img src="./assets/service3.jpg" alt="Servicio 3">
+                <a href="./pages/playas.html"> <img src="./assets/service3.jpg" alt="Servicio 3"></a>
                 <h4>VIAJES A LA PLAYA</h4>
             </div>
             <div class="service">
-                <img src="./assets/service4.jpg" alt="Servicio 4">
+                <a href="./pages/viajeslifestyle.html"> <img src="./assets/service4.jpg" alt="Servicio 4"></a>
                 <h4>VIAJES LIFESTYLE</h4>
             </div>
             <div class="service">
-                <img src="./assets/service5.jpg" alt="Servicio 5">
+                <a href="./pages/viajesculturales.html"> <img src="./assets/service5.jpg" alt="Servicio 5"></a>
                 <h4>VIAJES CULTURALES</h4>
             </div>
         </section>
