--- a/pages/viajesculturales.html
+++ b/pages/viajesculturales.html
@@ -35,9 +35,8 @@
                     <ul class="dropdown-menu">
                         <li><a href="./viajesamedida.html">Viajes a medida</a></li>
                         <li><a href="./viajeslifestyle.html">Viajes lifestyle</a></li>
-                        <li><a href="./weddingsylunademiel.html">Weddings y luna de miel </a></li>
                         <li><a href="#">Viajes culturales</a></li>
-                        <li><a href="./playas.html">Playas</a></li>
+                        <li><a href="./playas.html">Viajes a la playa</a></li>
                     </ul>
                 </li>
                 <li><a href="./oportunidades.html">Oportunidades</a></li>
@@ -47,7 +46,7 @@
         </nav>
     </header>
     <main class="viajesculturales">
-        <h1>Viajes culturales</h1>
+        <h1>VIAJES CULTURALES</h1>
         <div class="contenido">
             <div class="imagen">
                 <img src="../assets/viajesculturales.jpg" alt="Gabriela Molina">
