--- a/pages/viajeslifestyle.html
+++ b/pages/viajeslifestyle.html
@@ -35,9 +35,8 @@
                     <ul class="dropdown-menu">
                         <li><a href="./viajesamedida.html">Viajes a medida</a></li>
                         <li><a href="#">Viajes lifestyle</a></li>
-                        <li><a href="./weddingsylunademiel.html">Weddings y luna de miel </a></li>
                         <li><a href="./viajesculturales.html">Viajes culturales</a></li>
-                        <li><a href="./playas.html">Playas</a></li>
+                        <li><a href="./playas.html">Viajes a la playa</a></li>
                     </ul>
                 </li>
                 <li><a href="./oportunidades.html">Oportunidades</a></li>
