--- a/pages/viajesamedida.html
+++ b/pages/viajesamedida.html
@@ -35,9 +35,8 @@
                     <ul class="dropdown-menu">
                         <li><a href="#">Viajes a medida</a></li>
                         <li><a href="./viajeslifestyle.html">Viajes lifestyle</a></li>
-                        <li><a href="./weddingsylunademiel.html">Weddings y luna de miel </a></li>
                         <li><a href="./viajesculturales.html">Viajes culturales</a></li>
-                        <li><a href="./playas.html">Playas</a></li>
+                        <li><a href="./playas.html">Viajes a la playa</a></li>
                     </ul>
                 </li>
                 <li><a href="./oportunidades.html">Oportunidades</a></li>
@@ -47,7 +46,7 @@
         </nav>
     </header>
         <main class="quien-soy">
-            <h1>Viajes a medida</h1>
+            <h1>VIAJES A MEDIDA</h1>
             <div class="contenido">
                 <div class="imagen">
                     <img src="../assets/viajesamedida.jpg" alt="Gabriela Molina">
