--- a/pages/guiadeviajes.html
+++ b/pages/guiadeviajes.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="inspirit travel, inspirit, viajes,turismo, experiencias, playas, viajes lifestyle, viajes culturales">
     <meta name="copyright" content="Inspirit Travel">
     <meta name="robots" content="index, follow">
-    <meta property=og:title" content="Inspirit Travel - Quién Soy">
+    <meta property=og:title" content="Inspirit Travel - Magazine">
     <meta property=og:description" content="Empresa de viajes de turismo">
     <meta property="og:image" content="https://i.postimg.cc/rpDXgfTY/logo.png">
     <link rel="shortcut icon" href="../assets/logo.ico" type="image/x-icon">
@@ -17,18 +17,18 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-    <title>Inspirit Travel - Quién Soy</title>
+    <title>Inspirit Travel - Guia de viajes</title>
     <link rel="stylesheet" href="../style.css">
 </head>
 <body>
     <header>
         <div class="logo">
-            <a href="#"><img src="../assets/logo-blanco.png" alt="Inspirit"></a>
+            <a href="../index.html"><img src="../assets/logo-blanco.png" alt="Inspirit"></a>
         </div>
         <nav>
             <ul>
                 <li><a href="../index.html">Inicio</a></li>
-                <li><a href="#">Quién soy</a></li>
+                <li><a href="./quiensoy.html">Quién soy</a></li>
                 <li><a href="./asesorias.html">Asesorías</a></li>
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle">Experiencias</a>
@@ -40,28 +40,30 @@
                     </ul>
                 </li>
                 <li><a href="./oportunidades.html">Oportunidades</a></li>
-                <li><a href="./magazine.html">Magazine</a></li>
+                <li><a href="#">Guia de viajes</a></li>
                 <li><a href="./contacto.html">Contacto</a></li>
             </ul>
         </nav>
     </header>
-    <main class="quien-soy">
-        <h1>Quién Soy</h1>
-        <div class="contenido">
-            <div class="imagen">
-                <img src="../assets/quiensoy.jpg" alt="Gabriela Molina">
-            </div>
-            <div class="texto">
-                <p class="bienvenida">¡Bienvenidos a Inspirit! </p>
-                <p>Soy Gabriela Molina, una apasionada de los viajes y las conexiones auténticas. Desde siempre he encontrado en cada destino una oportunidad para inspirarme, reconectar conmigo misma y explorar nuevas perspectivas.
-                    Después de 11 años de ser parte de distintas empresas de turismo, decidí crear Inspirit para compartir esa magia con otras personas, diseñando experiencias que no solo llevan a lugares hermosos, sino que también tocan el corazón.
-                    Entiendo que cada viaje es más que solo una escapatoria: es una oportunidad para desconectar, reflexionar y renovar energías. 
-                    Por eso, cada itinerario que diseño tiene en cuenta tu necesidad de encontrar espacio para ti mismo, de tomar un respiro y reconectar con lo que realmente importa.
-                    <i>Mi misión es ayudarte a vivir viajes que transformen, que te inspiren y que se conviertan en recuerdos únicos.</i>
+    <main>
+        <h1 class="title">Guía de viajes</h1>
+        <article class="notas">
+            <img src="../assets/nota1.jpg" alt="Viajar con propósito">
+            <div>
+                <p>En un mundo que se mueve tan rápido, viajar con propósito se convierte en una invitación a detenernos, respirar y realmente estar presentes.
+                    Es mucho más que visitar un lugar; es sumergirse en él y permitir que su esencia nos transforme. 
+                    La conexión personal: descubrirte a través del viaje. Viajar con propósito es una oportunidad para desconectarte del ruido cotidiano y reconectar contigo mismo. 
+                    Desde una caminata por una montaña que desafía tus límites hasta un momento de reflexión frente al mar, estos viajes te ayudan a redescubrir quién eres en esencia. 
+                    Conexión con el lugar: más allá de ser un turista. Explorar un destino con propósito implica una interacción genuina con su cultura, su gente y su naturaleza. 
+                    Es elegir experiencias que te permitan sentir el latido del lugar: aprender sobre su historia, probar sus sabores auténticos, escuchar sus historias y respetar su identidad. 
+                    El propósito detrás de cada paso Cuando viajas de esta manera, cada paso cuenta. 
+                    Ya sea apoyando proyectos locales, conectándote con tradiciones o simplemente viajando de manera más consciente, cada acción suma al impacto positivo. 
+                    En Inspirit, creemos que cada viaje puede ser una experiencia transformadora cuando está guiado por el propósito de reconectar, inspirarse y explorar.
                 </p>
             </div>
-        </div>
-    </main>    
+        </article>
+    </main>
+    
     <footer>
         <div class="footer-container">
             <div class="footer-logo">
@@ -70,20 +72,20 @@
             <div class="footer-contact">
                 <div class="contact-item">
                     <img src="../assets/email-icon.png" alt="Email">
-                    <p>contacto@inspirittravel.com</p>
+                    <p>inspirit.travel.ar@gmail.com</p>
                 </div>
             </div>
             <div class="footer-social">
-                <a href="https://www.instagram.com" target="_blank">
+                <a href="https://www.instagram.com/inspirit.travel.ar/" target="_blank">
                     <img src="../assets/instagram-icon.png" alt="Instagram">
                 </a>
-                <a href="https://wa.me/1234567890" target="_blank">
+                <a href="https://wa.me/+5491140684143?text=Hola%20Inspirit!%20Quiero%20agendar%20una%20asesoría…" target="_blank">
                     <img src="../assets/meet.png" alt="Agendar Meet">
-                </a>
+                </a>           
             </div>
         </div>
     </footer>
-    <a href="https://wa.me/1234567890" target="_blank" class="whatsapp-btn">
+    <a href="https://wa.me/+5491140684143" target="_blank" class="whatsapp-btn">
         <img src="../assets/whatsapp.png" alt="WhatsApp" class="whatsapp-icon">
     </a>
     <script src="../script.js"></script>
