--- a/pages/viajesculturales.html
+++ b/pages/viajesculturales.html
@@ -28,7 +28,6 @@
         <nav>
             <ul>
                 <li><a href="../index.html">Inicio</a></li>
-                <li><a href="./quiensoy.html">Quién soy</a></li>
                 <li><a href="./asesorias.html">Asesorías</a></li>
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle">Experiencias</a>
@@ -40,13 +39,13 @@
                     </ul>
                 </li>
                 <li><a href="./oportunidades.html">Oportunidades</a></li>
-                <li><a href="./magazine.html">Magazine</a></li>
+                <li><a href="./guiadeviajes.html">Guia de viajes</a></li>
                 <li><a href="./contacto.html">Contacto</a></li>
             </ul>
         </nav>
     </header>
     <main class="viajesculturales">
-        <h1>VIAJES CULTURALES</h1>
+        <h1>Viajes Culturales</h1>
         <div class="contenido">
             <div class="imagen">
                 <img src="../assets/viajesculturales.jpg" alt="Gabriela Molina">
@@ -76,20 +75,20 @@
             <div class="footer-contact">
                 <div class="contact-item">
                     <img src="../assets/email-icon.png" alt="Email">
-                    <p>contacto@inspirittravel.com</p>
+                    <p>inspirit.travel.ar@gmail.com</p>
                 </div>
             </div>
             <div class="footer-social">
-                <a href="https://www.instagram.com" target="_blank">
+                <a href="https://www.instagram.com/inspirit.travel.ar/" target="_blank">
                     <img src="../assets/instagram-icon.png" alt="Instagram">
                 </a>
-                <a href="https://wa.me/1234567890" target="_blank">
+                <a href="https://wa.me/+5491140684143?text=Hola%20Inspirit!%20Quiero%20agendar%20una%20asesoría…" target="_blank">
                     <img src="../assets/meet.png" alt="Agendar Meet">
-                </a>
+                </a>  
             </div>
         </div>
     </footer>
-    <a href="https://wa.me/1234567890" target="_blank" class="whatsapp-btn">
+    <a href="https://wa.me/+5491140684143" target="_blank" class="whatsapp-btn">
         <img src="../assets/whatsapp.png" alt="WhatsApp" class="whatsapp-icon">
     </a>
     <script src="../script.js"></script>
