--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -28,7 +28,6 @@
         <nav>
             <ul>
                 <li><a href="../index.html">Inicio</a></li>
-                <li><a href="./quiensoy.html">Quién soy</a></li>
                 <li><a href="./asesorias.html">Asesorías</a></li>
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle">Experiencias</a>
@@ -40,13 +39,25 @@
                     </ul>
                 </li>
                 <li><a href="./oportunidades.html">Oportunidades</a></li>
-                <li><a href="./magazine.html">Magazine</a></li>
+                <li><a href="./guiadeviajes.html">Guia de viajes</a></li>
                 <li><a href="#">Contacto</a></li>
             </ul>
         </nav>
     </header>
-    <main>
-        <h1>Contacto</h1>
+    <h1>Contacto</h1>
+    <main class="main">
+
+        <div class="contact-form">
+            <form>
+              <label for="name">Nombre:</label>
+              <input type="text" required="">
+              <label for="email">Email:</label>
+              <input type="email" id="email" name="email" required="">
+              <label for="message">Mensaje:</label>
+              <textarea id="message" name="message" required=""></textarea>
+              <button type="submit">Enviar</button>
+            </form>
+          </div>
     </main>
     <footer>
         <div class="footer-container">
@@ -56,20 +67,20 @@
             <div class="footer-contact">
                 <div class="contact-item">
                     <img src="../assets/email-icon.png" alt="Email">
-                    <p>contacto@inspirittravel.com</p>
+                    <p>inspirit.travel.ar@gmail.com</p>
                 </div>
             </div>
             <div class="footer-social">
-                <a href="https://www.instagram.com" target="_blank">
+                <a href="https://www.instagram.com/inspirit.travel.ar/" target="_blank">
                     <img src="../assets/instagram-icon.png" alt="Instagram">
                 </a>
-                <a href="https://wa.me/1234567890" target="_blank">
+                <a href="https://wa.me/+5491140684143?text=Hola%20Inspirit!%20Quiero%20agendar%20una%20asesoría…" target="_blank">
                     <img src="../assets/meet.png" alt="Agendar Meet">
-                </a>
+                </a>           
             </div>
         </div>
     </footer>
-    <a href="https://wa.me/1234567890" target="_blank" class="whatsapp-btn">
+    <a href="https://wa.me/+5491140684143" target="_blank" class="whatsapp-btn">
         <img src="../assets/whatsapp.png" alt="WhatsApp" class="whatsapp-icon">
     </a>
     <script src="../script.js"></script>
