--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -25,6 +25,11 @@
         <div class="logo">
             <a href="../index.html"><img src="../assets/logo-blanco.png" alt="Inspirit"></a>
         </div>
+        <div class="menu-toggle">
+            <div class="bar"></div>
+            <div class="bar"></div>
+            <div class="bar"></div>
+        </div>
         <nav>
             <ul>
                 <li><a href="../index.html">Inicio</a></li>
@@ -44,12 +49,13 @@
             </ul>
         </nav>
     </header>
-    <h1>Contacto</h1>
     <main class="main">
-
+        <h1>Contacto</h1>
         <div class="contact-form">
             <form>
               <label for="name">Nombre:</label>
+              <input type="text" required="">
+              <label for="number">Número de telefono:</label>
               <input type="text" required="">
               <label for="email">Email:</label>
               <input type="email" id="email" name="email" required="">
