--- a/pages/guiadeviajes.html
+++ b/pages/guiadeviajes.html
@@ -25,10 +25,14 @@
         <div class="logo">
             <a href="../index.html"><img src="../assets/logo-blanco.png" alt="Inspirit"></a>
         </div>
+        <div class="menu-toggle">
+            <div class="bar"></div>
+            <div class="bar"></div>
+            <div class="bar"></div>
+        </div>
         <nav>
             <ul>
                 <li><a href="../index.html">Inicio</a></li>
-                <li><a href="./quiensoy.html">Quién soy</a></li>
                 <li><a href="./asesorias.html">Asesorías</a></li>
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle">Experiencias</a>
@@ -46,8 +50,9 @@
         </nav>
     </header>
     <main>
-        <h1 class="title">Guía de viajes</h1>
+        
         <article class="notas">
+            <h1>Guía de viajes</h1>
             <img src="../assets/nota1.jpg" alt="Viajar con propósito">
             <div>
                 <p>En un mundo que se mueve tan rápido, viajar con propósito se convierte en una invitación a detenernos, respirar y realmente estar presentes.
