--- a/pages/oportunidades.html
+++ b/pages/oportunidades.html
@@ -25,6 +25,11 @@
         <div class="logo">
             <a href="../index.html"><img src="../assets/logo-blanco.png" alt="Inspirit"></a>
         </div>
+        <div class="menu-toggle">
+            <div class="bar"></div>
+            <div class="bar"></div>
+            <div class="bar"></div>
+        </div>
         <nav>
             <ul>
                 <li><a href="../index.html">Inicio</a></li>
@@ -48,13 +53,18 @@
         <section class="oportunidades">
             <h1>Oportunidades</h1>
             <div class="imagenes">
-                <img src="../assets/imagen1.jpg" alt="Oportunidad 1">
-                <img src="../assets/imagen2.jpg" alt="Oportunidad 2">
-                <img src="../assets/imagen3.jpg" alt="Oportunidad 3">
-                <img src="../assets/imagen4.jpg" alt="Oportunidad 4">
+                <div class="imagen-container">
+                    <img src="../assets/imagen1.jpg" alt="Oportunidad 1">
+                    <img src="../assets/imagen2.jpg" alt="Oportunidad 2">
+                </div>
+                <div class="imagen-container">
+                    <img src="../assets/imagen3.jpg" alt="Oportunidad 3">
+                    <img src="../assets/imagen4.jpg" alt="Oportunidad 4">
+                </div>
             </div>
         </section>
     </main>
+    
     <footer>
         <div class="footer-container">
             <div class="footer-logo">
