--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -18,6 +18,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <title>Inspirit Travel - Contacto</title>
+    <script type="text/javascript" language="javascript" src="https://sistema.aseguratuviaje.com/cotizador/js/cotizador2024.js"></script>
+    <script>createlanding("UxJj5ntFJsTax6Tn9ZeU44eC8NjPWn%2FccFbipNwHZYc%3D", ["origen", "destino", "fechas", "edades", "email", "telefono"], 32, "es-ES", 0, "ATV");</script>
     <link rel="stylesheet" href="../style.css">
 </head>
 <body>
@@ -49,21 +51,23 @@
             </ul>
         </nav>
     </header>
-    <main class="main">
-        <h1>Contacto</h1>
-        <div class="contact-form">
-            <form>
-              <label for="name">Nombre:</label>
-              <input type="text" required="">
-              <label for="number">Número de telefono:</label>
-              <input type="text" required="">
-              <label for="email">Email:</label>
-              <input type="email" id="email" name="email" required="">
-              <label for="message">Mensaje:</label>
-              <textarea id="message" name="message" required=""></textarea>
-              <button type="submit">Enviar</button>
-            </form>
-          </div>
+    <body>
+        <main class="main">
+            <h1>Contacto</h1>
+            <div class="contact-card">
+                <img src="../assets/profile.jpg" alt="Gabriela Molina" class="profile-pic">
+                <div class="contact-info">
+                    <h2>Gabriela Molina</h2>
+                    <p class="position"><b>Founder Inspirit</b></p>
+                    <div class="contact-details">
+                        <p><i class="fa fa-whatsapp"></i> +54 9 11 4068 4143</p>
+                        <p><i class="fa fa-envelope"></i> inspirit.travel.ar@gmail.com</p>
+                        <p><i class="fa fa-map-marker"></i> Buenos Aires, Argentina</p>
+                    </div>
+                </div>
+            </div>
+        </main>
+    </body>
     </main>
     <footer>
         <div class="footer-container">
