--- a/pages/cotizador.html
+++ b/pages/cotizador.html
@@ -7,19 +7,18 @@
     <meta name="keywords" content="inspirit travel, inspirit, viajes,turismo, experiencias, playas, viajes lifestyle, viajes culturales">
     <meta name="copyright" content="Inspirit Travel">
     <meta name="robots" content="index, follow">
-    <meta property=og:title" content="Inspirit Travel - Playas">
+    <meta property=og:title" content="Inspirit Travel">
     <meta property=og:description" content="Empresa de viajes de turismo">
     <meta property="og:image" content="https://i.postimg.cc/rpDXgfTY/logo.png">
-    <link rel="shortcut icon" href="../assets/logo.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="./assets/logo.ico" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-    <title>Inspirit Travel - Playas</title>
-    <script type="text/javascript" language="javascript" src="https://sistema.aseguratuviaje.com/cotizador/js/cotizador2024.js"></script>
-    <script>createlanding("UxJj5ntFJsTax6Tn9ZeU44eC8NjPWn%2FccFbipNwHZYc%3D", ["origen", "destino", "fechas", "edades", "email", "telefono"], 32, "es-ES", 0, "ATV");</script>
+    <title>Inspirit Travel</title>
+   
     <link rel="stylesheet" href="../style.css">
 </head>
 <body>
@@ -42,7 +41,7 @@
                         <li><a href="./viajesamedida.html">Viajes a medida</a></li>
                         <li><a href="./viajeslifestyle.html">Viajes lifestyle</a></li>
                         <li><a href="./viajesculturales.html">Viajes culturales</a></li>
-                        <li><a href="#">Viajes a la playa</a></li>
+                        <li><a href="./playas.html">Viajes a la playa</a></li>
                     </ul>
                 </li>
                 <li><a href="./oportunidades.html">Oportunidades</a></li>
@@ -51,27 +50,14 @@
             </ul>
         </nav>
     </header>
-    <main class="playas">
-        <h1>Viajes a la playa</h1>
-        <div class="contenido">
-            <div class="imagen">
-                <img src="../assets/playas.jpg" alt="Gabriela Molina">
-            </div>
-            <div class="texto-playas">
-                
-                <p>Deja que el sonido de las olas, la arena suave y los atardeceres mágicos sean los protagonistas de tu próxima escapada.<br> En Inspirit, somos expertos en diseñar viajes de playa que combinan relax, lujo y exploración.
-
-                    Ya sea que sueñes con: <br>
-                    • Una villa privada frente al mar en un destino exótico.<br>
-                    • Descubrir playas secretas y piscinas naturales.<br>
-                    • Disfrutar de resorts todo incluido con servicios de primera clase.<br>
-                    • Practicar deportes acuáticos o simplemente descansar bajo el sol.<br>
-                    
-                    Nos aseguraremos de que tu experiencia sea tan única como vos. 
-                </p>
-            </div>
+    <body>
+    <main class="cotizador">
+            <h1>Cotizador de Seguros</h1>
+            <div id="landing"></div>
         </div>
     </main>
+</body>
+    </body>
     <footer>
         <div class="footer-container">
             <div class="footer-logo">
@@ -89,13 +75,15 @@
                 </a>
                 <a href="https://wa.me/+5491140684143?text=Hola%20Inspirit!%20Quiero%20agendar%20una%20asesoría…" target="_blank">
                     <img src="../assets/meet.png" alt="Agendar Meet">
-                </a>  
+                </a>           
             </div>
         </div>
     </footer>
     <a href="https://wa.me/+5491140684143" target="_blank" class="whatsapp-btn">
         <img src="../assets/whatsapp.png" alt="WhatsApp" class="whatsapp-icon">
     </a>
+    <script type="text/javascript" language="javascript" src="https://sistema.aseguratuviaje.com/scripts/clientcoti.js"></script>
+    <script>$(document).ready(function () { createlanding("UxJj5ntFJsTax6Tn9ZeU44eC8NjPWn%2FccFbipNwHZYc%3D", 1, "", "es-ES", 0); });</script>
     <script src="../script.js"></script>
 </body>
 </html>
