--- a/pages/oportunidades.html
+++ b/pages/oportunidades.html
@@ -18,6 +18,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <title>Inspirit Travel - Oportunidades</title>
+    <script type="text/javascript" language="javascript" src="https://sistema.aseguratuviaje.com/cotizador/js/cotizador2024.js"></script>
+    <script>createlanding("UxJj5ntFJsTax6Tn9ZeU44eC8NjPWn%2FccFbipNwHZYc%3D", ["origen", "destino", "fechas", "edades", "email", "telefono"], 32, "es-ES", 0, "ATV");</script>
     <link rel="stylesheet" href="../style.css">
 </head>
 <body>
